--- a/_posts/2024-08-25-Grokking.md
+++ b/_posts/2024-08-25-Grokking.md
@@ -14,11 +14,11 @@ Bigger is better. This phrase is so simple to be true, but it has been testified
 
 ## Grokking
 
-But what happens if we keep on training after overfitting period? Will the test accuracy stays low? This is what researchers in Gork paper answer. They first have a small algorithmically generated datasets: binary operation of division mod 97. Then, they train a neural network on it, recording train accuracy and validation accuracy at each step. They found out that train accuracy reaches near 100% at around 10^3 steps. Validation accuracy, however, takes 10^5 steps to suddenly achieve near 100%. There's no steady progress of val acc before 10^5. 
+But what happens if we keep on training after overfitting period? Will the test accuracy stays low? This is what researchers in Gork paper answer. They first have a small algorithmically generated datasets: binary operation of division mod 97. Then, they train a neural network on it, recording train accuracy and validation accuracy at each step. They found out that train accuracy reaches near 100% at around $$10^3$$ steps. Validation accuracy, however, takes $$10^5$$ steps to suddenly achieve near 100%. There's no steady progress of val acc before $$10^5$$. 
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="_posts/img/35561725154306_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+        {% include figure.liquid loading="eager" path="assets/img/35561725154306_.pic.jpg" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 
@@ -28,7 +28,7 @@ However, this is quite an interesting phenomenon and needs to be studied. If thi
 
 ## Grokking fast - low frequent gradient
 
-As mentioned before, reaching grokking phenomenon can be time-consuming. For a simple dataset produced by modular, it takes 1000 $$\times$$ for val acc to rise compared to train acc. For a larger complex dataset, the time may take too long to observe any rice of val accuracy. 
+As mentioned before, reaching grokking phenomenon can be time-consuming. For a simple dataset produced by modular, it takes $$1000\times$$ for val acc to rise compared to train acc. For a larger complex dataset, the time may take too long to observe any rice of val accuracy. 
 
 The authors in Grokfast aimed to solve this problem by proposing to amplify slow gradients to accelerate grokking effect. They assumed that grokking effect was due to the slow-varying component of the gradient that results in long time grokking. They treat gradient as a discrete signal and apply low-pass filter to acquire gradients with low frequency, i.e. slow-varying. After that, use a hyper parameter to augment slow gradient and add it to total gradient. Overall, this paper proposes an optimization step to help the model achieve grokking faster.
 
