--- a/_posts/2024-08-27-bits-bpe.md
+++ b/_posts/2024-08-27-bits-bpe.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: History of Position Encoding
+title: bit-bpe
 date: 2024-08-21 16:15:09
 description: 
 categories: encoding method
