--- a/_posts/2024-08-25-Grokking.md
+++ b/_posts/2024-08-25-Grokking.md
@@ -6,6 +6,9 @@ description:
 tags: formatting images
 categories: encoding method
 tabs: true
+related_posts: false
+toc: 
+  sidebar: left
 ---
 
 ## Introduction
