--- a/_posts/2024-08-25-Grokking.md
+++ b/_posts/2024-08-25-Grokking.md
@@ -35,7 +35,20 @@ As mentioned before, reaching grokking phenomenon can be time-consuming. For a s
 
 The authors in Grokfast aimed to solve this problem by proposing to amplify slow gradients to accelerate grokking effect. They assumed that grokking effect was due to the slow-varying component of the gradient that results in long time grokking. They treat gradient as a discrete signal and apply low-pass filter to acquire gradients with low frequency, i.e. slow-varying. After that, use a hyper parameter to augment slow gradient and add it to total gradient. Overall, this paper proposes an optimization step to help the model achieve grokking faster.
 
-I think the idea that Grokking is the result of slow-varying gradient is interesting, and it looks promising by its experiment on elementary dataset, like MNIST, showing that grokking can happen to image dataset. 
+However, when I looked at the code, I was a bit disappointed by their implementations. I previously thought they were doing fourier transformation on matrix to get low-frequency gradient. However, their implementation looked more like optimizer, with the introduction of queue of gradients and then do either summation or mean over that queue of gradients. 
+
+However, the result is quite amazing, and the Grokfast method works for increasing test evaluation. I believe that Grokking is the result of slow-varying gradient is interesting, and it looks promising by its experiment on elementary dataset, like MNIST, showing that grokking can happen to image dataset. 
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/grok_fast_none.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/grokfast_em.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+
 
 ## Conclusion
 
