--- a/_posts/2024-10-07-testRAG.md
+++ b/_posts/2024-10-07-testRAG.md
@@ -25,25 +25,15 @@ The number of dimension in mean and deviation vectors has a significant impact o
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.liquid loading="eager" path="assets/img/image construction/VAE_4_2.jpg" class="img-fluid rounded z-depth-1" %}
     </div>
-</div>
-<div class="caption">
-    2-dim latent space
-</div>
-<div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.liquid loading="eager" path="assets/img/image construction/VAE_4_4.jpg" class="img-fluid rounded z-depth-1" %}
     </div>
-</div>
-<div class="caption">
-    4-dim latent space
-</div>
-<div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.liquid loading="eager" path="assets/img/image construction/VAE_4_10.jpg" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 <div class="caption">
-    10-dim latent space
+    From left to right, the dimension in mean vector and deviation vectors is 2, 4, 10
 </div>
 
 As the latent space dim increased, the quality of produced image significantly improves. 
@@ -52,10 +42,16 @@ However, when we added more details in the image, such as CIFAR10, the quality o
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/VAE_cifar10.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/VAE_cifar101.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
         {% include figure.liquid loading="eager" path="assets/img/image construction/VAE_cifar102.jpg" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 <div class="caption">
-    200-dim latent space
+    I try to improve performance of VAE on CIFAR10 by only training on 200, 100, 25 images. However, the generated images are very blurry.
 </div>
 
