--- a/_posts/2024-10-07-testRAG.md
+++ b/_posts/2024-10-07-testRAG.md
@@ -12,11 +12,13 @@ toc:
 ---
 
 
-Text generation is easy in that it's constructed based on a series of discrete tokens, which is easy to  construct. Image generation posed greater challenge due to the high dimension of image space. Each pixel is three dimension, corresponding to RGB. for an image with millions of pixels, it'll be too computatianl expensive if we generate pixels by pixels. Moreover, each pixel is depended not only on previous pixels but also every adjacent pixels. A more appropriate approach is to consider each image as a sampling on a latent distribution over image. By using this approach, the model can produce images faster than producing each pixels. Since this blog will discuss various ways of generating image, detailed deduction of this algorithm will be referenced by other posts. 
+Text generation is easy in that it's constructed based on a series of discrete tokens, which is easy to  construct. Image generation posed greater challenge due to the high dimension of image space. Each pixel is three dimension, corresponding to RGB. for an image with millions of pixels, it'll be too computatianl expensive if we generate pixels by pixels. Moreover, each pixel is depended on literally any pixels on the image, such as its adjacent pixels, or pixels further away. Another approach to generate image is to consider each image as a sampling on a latent distribution over image. After selecting a sample over the distribution, we can use a decoder to decode the image. By using this approach, the model can produce images faster than producing each pixels one at a time like AR model. It can also generate greater variety of image. Since this blog is more about experiments of generative models, it won't explain the mechanics behind all models. For more explanations of these models, please see the reference below.
 
 # VAE
 
-VAE is a type of image construction algorithm, including encoder and decoder. Encoder receive input image and produce mean vectors and deviation vectors that define a series of independent normal distributions. Then the model will draw a sample from the distributions and use decoder to produce an image.
+VAE is a type of image construction algorithm, including encoder and decoder. Encoder receives input image and produce mean vectors and deviation vectors that define a series of independent normal distributions. Then the model will draw a sample from the distributions and use decoder to produce an image.
+
+I implemented a simple version of VAE, using CNN as the encoder and decoder
 
 The number of dimension in mean and deviation vectors has a significant impact on the quality of image generation. 
 
@@ -35,10 +37,9 @@ The number of dimension in mean and deviation vectors has a significant impact o
     From left to right, the dimension in mean vector and deviation vectors is 2, 4, 10
 </div>
 
-As the latent space dim increased, the quality of produced image significantly improves. 
+As the latent space dimention increases, the quality of produced image significantly improves. 
 
-However, when we added more details in the image, such as CIFAR10, the quality of generated image drastically decreases.
-
+However, when we use images with more details to train the model, such as CIFAR10, the model can't reconstruct the original images. The reconstructed images are instead very blurry.
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.liquid loading="eager" path="assets/img/image construction/VAE_cifar10.jpg" class="img-fluid rounded z-depth-1" %}
@@ -54,7 +55,7 @@ However, when we added more details in the image, such as CIFAR10, the quality o
     I try to improve performance of VAE on CIFAR10 by only training on 200, 100, 25 images. However, the generated images are very blurry.
 </div>
 
-As I changed the size of train dataset, there's an interesting phenomenon regarding image generation.
+As I change the size of train dataset, there's an interesting phenomenon regarding image generation.
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
@@ -74,3 +75,53 @@ As I changed the size of train dataset, there's an interesting phenomenon regard
 We can see that the generated image is like taking the average of the images in a batch. This is probably 
 because when doing back propagation, the model is doing propagation on all images and takes the average of the gradient. Thus, the final image will resemble all the images in the batch.
 
+# causes
+
+As I checked from website, I noticed a phenomenon called posterior collpase. Posterior collapse is when signal from input x to posterior parameters is either too weak or too noisy, and as a result, decoder starts ignoring z samples drawn from the distribution by encoder. 
+
+A more evident phenomenon is when the decoder generates an image regardless of the input. Thus, I tested some images on VAE to see whether they produce the same image despite different inputs.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/39211730226621_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/39221730226633_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/39231730226639_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/39241730226646_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/39251730226653_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+
+The second and fourth images are generated based on latent variable by the first and third images. The right one is generated based on a random noise. We can see that the generated images are nearly the same, which satisfies the symptoms of posterior collapse. 
+
+Next, I try to figure out the cause of such phenomenon. I first check latent variables z for first and third images, making sure that they are not 0 and different. However, they are not nearly 0 and are different from each other, meaning that the problem lies on the decoder instead of encoder. 
+
+I first changed the decoder, adding more linear layers and hoping it can learn more about . However, it doesn't work and the generated images are still very blurry and the same for any latent variable z.
+
+Later, I decided to change the loss term. For VAE, there are reconstruction loss and KL loss. Reconstruction loss measures whether the generated image matches the original image. KL loss measures whether distribution of latent varaible matches standard Gaussian distribution. I suspect that the gradient of reconstruction loss is too small compared to the gradient of KL loss, making the model neglect image reconstruction. Threfore, I heavily penalized reconstruction loss, multiplying it by 6000. 
+
+Below are the result after penalizing reconstruction:
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/39401730233614_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/39411730233637_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/39421730233650_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/image construction/39431730233659_.pic.jpg" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+
+Finally, the model is able to generate discernable image based on the original image, but the generated image is still a bit blurry.
