--- a/_posts/2024-10-07-testRAG.md
+++ b/_posts/2024-10-07-testRAG.md
@@ -12,7 +12,7 @@ toc:
 ---
 
 
-Text generation is easy in that it's constructed based on a series of discrete tokens, which is easy to  construct. Image generation posed greater challenge due to the high dimension of image space. Each pixel is three dimension, corresponding to RGB. for an image with millions of pixels, it'll be too computatianl expensive if we generate pixels by pixels. Moreover, each pixel is depended on literally any pixels on the image, such as its adjacent pixels, or pixels further away. Another approach to generate image is to consider each image as a sampling on a latent distribution over image. After selecting a sample over the distribution, we can use a decoder to decode the image. By using this approach, the model can produce images faster than producing each pixels one at a time like AR model. It can also generate greater variety of image. Since this blog is more about experiments of generative models, it won't explain the mechanics behind all models. For more explanations of these models, please see the reference below.
+Text generation is easy in that it's constructed based on a series of discrete tokens, which is easy to  construct. Image generation posed greater challenge due to the high dimension of image space. For an image with millions of pixels, it'll be too computatianl expensive if we generate pixel by pixel. Moreover, each pixel is depended on possibly any pixel on the image, such as its adjacent pixels, or pixels further away. Another approach to generate image is to consider each image as a sampling on a latent distribution over image. After selecting a sample over the distribution, we can use a decoder to decode the image. By using this approach, the model can produce images faster than producing each pixels one at a time like AR model. It can also generate greater variety of image. Since this blog is more about experiments of generative models, it won't explain the mechanics behind all models. For more explanations of these models, please see the reference below.
 
 # VAE
 
@@ -77,7 +77,7 @@ because when doing back propagation, the model is doing propagation on all image
 
 # causes
 
-As I checked from website, I noticed a phenomenon called posterior collpase. Posterior collapse is when signal from input x to posterior parameters is either too weak or too noisy, and as a result, decoder starts ignoring z samples drawn from the distribution by encoder. 
+As I checked from website, I got to know a phenomenon called posterior collpase. Posterior collapse is when signal from input x to posterior parameters is either too weak or too noisy, and as a result, decoder starts ignoring z samples drawn from the distribution by encoder. 
 
 A more evident phenomenon is when the decoder generates an image regardless of the input. Thus, I tested some images on VAE to see whether they produce the same image despite different inputs.
 
@@ -99,15 +99,15 @@ A more evident phenomenon is when the decoder generates an image regardless of t
     </div>
 </div>
 
-The second and fourth images are generated based on latent variable by the first and third images. The right one is generated based on a random noise. We can see that the generated images are nearly the same, which satisfies the symptoms of posterior collapse. 
+The second and fourth images are generated based on latent variable by the first and third images. The the most right one is generated based on a random noise. We can see that the generated images are nearly the same, which satisfies the symptoms of posterior collapse. 
 
-Next, I try to figure out the cause of such phenomenon. I first check latent variables z for first and third images, making sure that they are not 0 and different. However, they are not nearly 0 and are different from each other, meaning that the problem lies on the decoder instead of encoder. 
+Next, I try to figure out the cause of such phenomenon. I first check latent variables z for first and third images, making sure that they are not 0 and different. However, they are not nearly 0 and are different from each other, meaning that the problem probably lies on the decoder instead of encoder. 
 
-I first changed the decoder, adding more linear layers and hoping it can learn more about . However, it doesn't work and the generated images are still very blurry and the same for any latent variable z.
+I then changed the decoder, adding more linear layers and hoping it can learn more about latent variable. However, it doesn't work and the generated images are still very blurry and the same for any latent variable z. So, it's most likely not the fault of decoder.
 
-Later, I decided to change the loss term. For VAE, there are reconstruction loss and KL loss. Reconstruction loss measures whether the generated image matches the original image. KL loss measures whether distribution of latent varaible matches standard Gaussian distribution. I suspect that the gradient of reconstruction loss is too small compared to the gradient of KL loss, making the model neglect image reconstruction. Threfore, I heavily penalized reconstruction loss, multiplying it by 6000. 
+Later, I examine the loss function which has two parts, reconstruction loss and KL loss. econstruction loss measures whether the generated image matches the original image. KL loss measures whether distribution of latent varaible matches standard Gaussian distribution. During training session, I found out that reconstruction loss is usually 0.2 and remains the same during the process. The KL loss is usually a few hundred initially and then rapidly decreasing to 1 or 2. This stark contrast between reconstruction loss and KL loss is possibly the reason why the model neglects image reconstruction.
 
-Below are the result after penalizing reconstruction:
+Threfore, I heavily penalized reconstruction loss, multiplying it by 6000. Below are the result after penalizing reconstruction:
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
@@ -124,4 +124,5 @@ Below are the result after penalizing reconstruction:
     </div>
 </div>
 
-Finally, the model is able to generate discernable image based on the original image, but the generated image is still a bit blurry.
+Finally, the model is able to generate discernable image based on the original image, but the generated image is still a bit blurry. 
+
