--- a/_posts/2024-10-07-testRAG.md
+++ b/_posts/2024-10-07-testRAG.md
@@ -75,7 +75,7 @@ As I change the size of train dataset, there's an interesting phenomenon regardi
 We can see that the generated image is like taking the average of the images in a batch. This is probably 
 because when doing back propagation, the model is doing propagation on all images and takes the average of the gradient. Thus, the final image will resemble all the images in the batch.
 
-# causes
+# Causes
 
 As I checked from website, I got to know a phenomenon called posterior collpase. Posterior collapse is when signal from input x to posterior parameters is either too weak or too noisy, and as a result, decoder starts ignoring z samples drawn from the distribution by encoder. 
 
