--- a/_posts/2024-10-07-VAE.md
+++ b/_posts/2024-10-07-VAE.md
@@ -12,7 +12,9 @@ toc:
 ---
 
 
-Text generation is easy in that it's constructed based on a series of discrete tokens, which is easy to  construct. Image generation posed greater challenge due to the high dimension of image space. For an image with millions of pixels, it'll be too computatianl expensive if we generate pixel by pixel. Moreover, each pixel is depended on possibly any pixel on the image, such as its adjacent pixels, or pixels further away. Another approach to generate image is to consider each image as a sampling on a latent distribution over image. After selecting a sample over the distribution, we can use a decoder to decode the image. By using this approach, the model can produce images faster than producing each pixels one at a time like AR model. It can also generate greater variety of image. Since this blog is more about experiments of generative models, it won't explain the mechanics behind all models. For more explanations of these models, please see the reference below.
+# AE
+
+Before talking about VAE, first talk about AE model. AE model a
 
 # VAE
 
