--- a/_posts/2024-11-04-AGI.md
+++ b/_posts/2024-11-04-AGI.md
@@ -13,7 +13,7 @@ toc:
 
 Reasoning and perception, two of the most important functionality in human being, are something I'm always pondering about. How could I use current AI architecture to tackle these tasks. 
 
-For reasoning, we have the llm to process discretized text or tokens. For perception, which contains infinite states that a single word can't describe, should be diffusion model that can model any given distributions, at least from my opinion. It can model either image distribution, or image distribution conditioned on certain text, or even distribution of action from diffusion policy. However, no matter what distribution it aims to produce, it always starts from a simple Guassian distribution. 
+For reasoning, we have the llm to process discretized text or tokens. For perception, which contains infinite states that a single word can't describe, should be diffusion model that can model any given distributions, at least from my opinion. It can model either image distribution, or image distribution conditioned on certain text, or even distribution of action which comes from diffusion policy. However, no matter what distribution it aims to produce, it always starts from a simple Guassian distribution. 
 
 My question arises as to whether diffusion model can start from a prior distribution that's already conditioned on some information. 
 
@@ -25,9 +25,7 @@ My question arises as to whether diffusion model can start from a prior distribu
 
 Yes, there's guidance model, classifier or classifier-free that can guide unconditional model towards our desired distribution using gradient of data distribution. The mathematical deduction of such guidance method is very beautiful and incontroversial. However, when I look at the model architecture, the model seems clumsy with cross attention with text. If I manage to diffuse model from prior distribution without use of guidance, then it saves the computation of the cross attention.
 
-Therefore, the following blog aims to answer that question.
-
-
+Therefore, the following blog aims to answer that question of whether the diffusion model can be conditioned on text without passing semantic information at every timestep.
 
 # Diffusion
 
@@ -35,7 +33,7 @@ Back to diffusion, as I delve more into the model, I realize that it's more than
 
 For the next part, I'll explain how diffusion model works from a mathematical view point, which involves too much on measure theory which I have just begun to learn, but I'll try my best to explain.
 
-Diffusion model can be seen as learning the predefined trajectory between 2 know distribution in a 2-Wasserstein Space. That trajectory is defined by diffusion process. What the model learns is the tangential space of that trajectory, or conditional probability. 
+Diffusion model can be seen as learning to follow the predefined trajectory between 2 known distributions in a 2-Wasserstein Space. That trajectory is defined by diffusion process. What the model learns is the tangential space of that trajectory, or conditional probability. 
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
@@ -43,18 +41,32 @@ Diffusion model can be seen as learning the predefined trajectory between 2 know
     </div>
 </div>
 
+Traditional conditional diffusion model looks more like this where every targeted distributions starts from a Gaussian distribution.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/AGI/5.png" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+
+However, I want the diffusion model looks more like the following. Where diffusion process starts from different distributions conditioned on text.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/AGI/2.png" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+
+Therefore, I need to define a diffusion trajectory such that it ensures it has targeted distribution and source distribution at their ends.
+
+# Deduction of conditional diffusion
 
 
-Unsatisfied by the assumption that every image must derive from Gaussian distribution. I hope that image comes from a prior distribution, something that's determined by the language, and the images that contain that semantic information is a random sample around that information. Therefore, I modify the prior Gaussian distribution such that it comes from a conditional. 
-
-
-
+ 
 For that, I copy the code from  and modify the noise term. 
 
-
 However, when I try to produce a series of images of 5, I got the following problem.  
-
-
+ 
 A distribution surrounding a specific Gaussian distribution doesn't map to image distribution of 5. Instead, it matches to other distributions of images.
 
 My theory as to why it deviates is the following:
@@ -69,7 +81,9 @@ While I hope that original distribution , but in reality, the trajectory to diff
 
 While in original diffusion that diffuses from a Gaussian distribution, it starts from a single point on the space, ensuring that when it diffuses to other distribution of images, it doesn't intersect with each other. 
 
+Of course, I still can't test whether the hypothesis is true due to unfeasibility of plot how data migrates in high dimension. I consider to experiment it on data in low dimension, but I'm unsure whether experiment in low dimension can shed light over high dimension due to 
+
 Another limitations when I consider this approach is that different semantic distribution will have different variations depending on the abstraction of the text. A word "Thing" will surely has massive variations to cover all possible subjects. A word "dog", a subset of the word "Thing", will surely have less variations in prior distributions. Modeling variances based on the abstraction of word is really difficult, at least from my knowledge.
 
-Although mathematically, it's 
+
 
