--- a/_posts/2025-11-19-VAE_new.md
+++ b/_posts/2025-11-19-VAE_new.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Diffusion series - diffusion model
+title: Diffusion series - VAE model
 date: 2024-04-24 16:15:09
 description: 
 tags: formatting images
