--- a/_posts/2025-12-22-zod.md
+++ b/_posts/2025-12-22-zod.md
@@ -14,7 +14,11 @@ toc:
 # Background
 At the beginning of the quarter, advised by my professor, I began to dig deep into this paper: Zeroth-Order Diffusion Monte Carlo (ZOD-MC). The idea is fascinating—a way to sample from tricky distributions without needing them to be log-concave or satisfy fancy inequalities like Log-Sobolev. Also, it uses only zeroth-order queries to the potential V, no gradients. It employs denoising diffusion to handle multimodality and even discontinuities, which is cool for real-world stuff like non-convex potentials with high barriers. I feel like this can be a great starting point for studying and researching sampling and diffusion processes. And I started my journey from here.
 
-# Thought Process
+# log #1: Decomposition of potential function 2025-12-20
+
+Current stage goal: Implementing partial zod mc on independent distribution. 
+
+Progress and work: I have read zodmc, A Proximal Algorithm for Sampling, 
 
 But as I read through, the curse of dimensionality hit me hard. The oracle complexity is exp(Õ(d) log(1/ε)), great for low d but very inefficient in high dimensions. In fact, many of the sampling methods it references are either exponential or pseudo-exponential for non-concave functions, or polynomial but concave or with other nice properties. This got me thinking: how to make it better to improve on zero-order sampling? My professor suggested starting with simple cases, like when dimensions are independent or the potential decomposes into lower-dim parts.
 
