--- a/_posts/2025-10-07-zod.md
+++ b/_posts/2025-10-07-zod.md
@@ -25,9 +25,9 @@ Current stage goal: Implementing partial zod mc on independent distribution.
 
 Progress and work: I have read zodmc, A Proximal Algorithm for Sampling, 
 
-But as I read through, the curse of dimensionality hit me hard. The oracle complexity is exp(Õ(d) log(1/ε)), great for low d but very inefficient in high dimensions. In fact, many of the sampling methods it references are either exponential or pseudo-exponential for non-concave functions, or polynomial but concave or with other nice properties. This got me thinking: how to make it better to improve on zero-order sampling? My professor suggested starting with simple cases, like when dimensions are independent or the potential decomposes into lower-dim parts.
+But as I read through, the curse of dimensionality hit me hard. The oracle complexity is $\exp(\tilde{O}(d) \log(1/\varepsilon))$, great for low $d$ but very inefficient in high dimensions. In fact, many of the sampling methods it references are either exponential or pseudo-exponential for non-concave functions, or polynomial but concave or with other nice properties. This got me thinking: how to make it better to improve on zero-order sampling? My professor suggested starting with simple cases, like when dimensions are independent or the potential decomposes into lower-dim parts.
 
-That sparked the "partial ZOD-MC" idea. If V(x) breaks into sum V_j(x_j) over b blocks, each of size d/b, I could run ZOD-MC on each block separately. Parallelize it, concatenate samples. Complexity drops to O(b) * exp(Õ(d/b) log(1/ε)). Feels like a win for independent distributions – tested mentally on separable mixtures, seems efficient.
+That sparked the "partial ZOD-MC" idea. If $V(x)$ breaks into sum $V_j(x_j)$ over $b$ blocks, each of size $d/b$, I could run ZOD-MC on each block separately. Parallelize it, concatenate samples. Complexity drops to $O(b) \cdot \exp(\tilde{O}(d/b) \log(1/\varepsilon))$. Feels like a win for independent distributions – tested mentally on separable mixtures, seems efficient.
 
 However, implementing the code is quite hard work since the code in the paper only deals with full dimension (log_prob). And no distributions are provided to construct an independent distribution. I need to write log_prob for single dimension and then write custom independent distribution to test my sampling method. After months of efforts, I finally got my method working, and it’s efficient and works perfectly on independent distributions. Which is, although not so significant since it only works on independent distributions, a solid step.
 
