--- a/_posts/2024-07-14-SDE.md
+++ b/_posts/2024-07-14-SDE.md
@@ -11,3 +11,117 @@ toc:
   sidebar: left
 ---
 
+# Stochastic Differential Equations: A Concise Technical Introduction
+
+**By: An Undergraduate Student**  
+*Date: December 30, 2025*
+
+This post provides a technically oriented yet accessible introduction to stochastic differential equations (SDEs) for readers familiar with undergraduate calculus, linear algebra, and basic probability.
+
+## Brownian Motion
+
+Standard Brownian motion (Wiener process) $\{W_t\}_{t \geq 0}$ satisfies:
+
+1. $W_0 = 0$ almost surely,
+2. Independent increments: for $0 \leq t_1 < t_2 < \cdots < t_n$, the random variables $W_{t_{k+1}} - W_{t_k}$ are independent,
+3. Gaussian increments: $W_t - W_s \sim \mathcal{N}(0, t-s)$ for $t > s$,
+4. Almost surely continuous paths.
+
+The quadratic variation of $W$ on $[0,t]$ is $\langle W \rangle_t = t$ a.s.
+
+## Stochastic Differential Equations
+
+An Itô stochastic differential equation has the form
+
+$$
+dX_t = \mu(t, X_t) \, dt + \sigma(t, X_t) \, dW_t, \quad X_0 = x_0,
+$$
+
+or in integral form
+
+$$
+X_t = x_0 + \int_0^t \mu(s, X_s) \, ds + \int_0^t \sigma(s, X_s) \, dW_s.
+$$
+
+The second integral is the Itô stochastic integral, defined as a limit in probability of non-anticipating Riemann sums.
+
+Assume $\mu, \sigma$ satisfy Lipschitz and linear growth conditions:
+
+$$
+|\mu(t,x) - \mu(t,y)| + |\sigma(t,x) - \sigma(t,y)| \leq K |x - y|,
+$$
+
+$$
+|\mu(t,x)| + |\sigma(t,x)| \leq K(1 + |x|).
+$$
+
+Then there exists a unique strong solution that is pathwise continuous.
+
+## Itô's Formula
+
+Let $f(t,x) \in C^{1,2}([0,\infty) \times \mathbb{R})$. Then for an Itô process $X_t$,
+
+$$
+df(t,X_t) = \frac{\partial f}{\partial t}(t,X_t) \, dt + \frac{\partial f}{\partial x}(t,X_t) \, dX_t + \frac{1}{2} \frac{\partial^2 f}{\partial x^2}(t,X_t) \, (dX_t)^2,
+$$
+
+where the multiplication table is $dt \cdot dt = dt \cdot dW_t = 0$, $dW_t \cdot dW_t = dt$.
+
+Substituting $dX_t = \mu \, dt + \sigma \, dW_t$ yields
+
+$$
+df(t,X_t) = \left( f_t + \mu f_x + \frac{1}{2} \sigma^2 f_{xx} \right) dt + \sigma f_x \, dW_t.
+$$
+
+## Example: Geometric Brownian Motion
+
+Consider the SDE for asset prices
+
+$$
+dS_t = \mu S_t \, dt + \sigma S_t \, dW_t, \quad S_0 > 0.
+$$
+
+Apply Itô's formula to $f(s) = \log s$:
+
+$$
+f_s = \frac{1}{s}, \quad f_{ss} = -\frac{1}{s^2}.
+$$
+
+Then
+
+$$
+d(\log S_t) = \left( \mu - \frac{1}{2} \sigma^2 \right) dt + \sigma \, dW_t.
+$$
+
+Integrating,
+
+$$
+\log S_t = \log S_0 + \left( \mu - \frac{1}{2} \sigma^2 \right) t + \sigma W_t.
+$$
+
+Thus
+
+$$
+S_t = S_0 \exp\left( \left( \mu - \frac{1}{2} \sigma^2 \right) t + \sigma W_t \right).
+$$
+
+$S_t$ is log-normally distributed with
+
+$$
+\mathbb{E}[S_t] = S_0 e^{\mu t}.
+$$
+
+## Stratonovich Interpretation (Brief Note)
+
+The alternative Stratonovich SDE
+
+$$
+dX_t = \mu(t,X_t) \, dt + \sigma(t,X_t) \circ dW_t
+$$
+
+converts to Itô form via
+
+$$
+\mu^{\text{Itô}} = \mu^{\text{Strat}} + \frac{1}{2} \sigma \frac{\partial \sigma}{\partial x}.
+$$
+
