--- a/_posts/2024-07-14-SDE.md
+++ b/_posts/2024-07-14-SDE.md
@@ -43,32 +43,26 @@ $$
 dX_t = \mu(X_t, t)\, dt + \sigma(X_t, t)\, dW_t, \quad X_0 = x_0.
 $$
 
-Here the noise term is $$\sigma(X_t, t)\, dW_t$$.
-
-In theory, $$dW_t$$ can be noise that follow any kind of distributions. For instance, $dW_t$ can be the increment of a compensated Poisson process to follow Poisson distribution. But in application, we often choose standard Brownian motion because it possesses several onvenient properties that make the resulting Itô calculus more tractable and powerful.
+The noise term is $$\sigma(X_t, t)\, dW_t$$, which is driven by increments of a stochastic process $$W_t$$​. In principle, many different processes could be used (for example, increments of a compensated Poisson process to model jump discontinuities). But in application, we often choose standard Brownian motion because it possesses several onvenient properties that make the resulting Itô calculus more tractable and powerful.
 
 These key properties include:
 - **Gaussian increments**: $$W_t - W_s \sim \mathcal{N}(0, t-s)$$ for $$t > s$$,
 - **Independent increments**: $W_{t_{k+1}} - W_{t_k}$ are mutually independent for disjoint intervals,
 - **Almost surely continuous paths**: $$t \mapsto W_t(\omega)$$ is continuous for almost every $$\omega$$.
 
-## Stochastic Differential Equations
+A crucial consequence of the Gaussian increments property is the scaling of the noise in small time intervals. Over an infinitesimal interval $$dt$$, we have
 
-$$
-dX_t = \mu(X_t, t)\, dt + \sigma(X_t, t)\, dW_t, \quad X_0 = x_0.
-$$
+$$$dW_t = W_{t+dt} - W_t \sim \mathcal{N}(0, dt)$$$
 
-Now that we have such differential form, we can rewrite it into integral form
+Thus, $$dW_t$$ has mean zero and variance $$dt$$, so its typical magnitude (standard deviation) is $$\sqrt{dt}$$.
 
-$$
-X_t = x_0 + \int_0^t \mu(s, X_s) \, ds + \int_0^t \sigma(s, X_s) \, dW_s.
-$$
+This gives rise to a useful informal rule in Itô calculus (which you'll see soon) is that $$(dW_t)^2 \approx dt$$ on average, while higher powers like $$(dt)^2$$ or $$dt \cdot dW_t$$ are negligible.
 
-The second integral is the Itô stochastic integral.
+These informal rules—$$(dW_t)^2 \approx dt$$, $$dt \cdot dW_t \approx 0$$, $$(dt)^2 \approx 0$$—will be made rigorous later, but they hint at why the stochastic integral is very different from traditional calculus.
 
 ## Itô's Formula
 
-Let $$f(t,x) \in C^{1,2}([0,\infty) \times \mathbb{R})$$. Then for an Itô process $$X_t$$,
+If a function $$f(t,X_t)$$ includes random variabes $$X_t$$. Then for an Itô process, we can immediately deduce such formula
 
 $$
 df(t,X_t) = \frac{\partial f}{\partial t}(t,X_t) \, dt + \frac{\partial f}{\partial x}(t,X_t) \, dX_t + \frac{1}{2} \frac{\partial^2 f}{\partial x^2}(t,X_t) \, (dX_t)^2,
@@ -90,7 +84,7 @@ $$
 dS_t = \mu S_t \, dt + \sigma S_t \, dW_t, \quad S_0 > 0.
 $$
 
-Apply Itô's formula to $f(s) = \log s$:
+Apply Itô's formula to $$f(s) = \log s$$:
 
 $$
 f_s = \frac{1}{s}, \quad f_{ss} = -\frac{1}{s^2}.
@@ -114,7 +108,7 @@ $$
 S_t = S_0 \exp\left( \left( \mu - \frac{1}{2} \sigma^2 \right) t + \sigma W_t \right).
 $$
 
-$S_t$ is log-normally distributed with
+$$S_t$$ is log-normally distributed with
 
 $$
 \mathbb{E}[S_t] = S_0 e^{\mu t}.
