--- a/_posts/2024-07-14-SDE.md
+++ b/_posts/2024-07-14-SDE.md
@@ -31,7 +31,7 @@ $$
 df = b(f,t)\, dt.
 $$
 
-Here $$b(\cdot,t)$$ is the deterministic drift coefficient, and for suitable conditions on $$b$$, there exists a unique deterministic solution $f(t)$.
+Here $$b(\cdot,t)$$ is the deterministic drift coefficient, and for suitable conditions on $$b$$, there exists a unique deterministic solution $$f(t)$$.
 
 Ordinary differential equations often provide an effective framework for modeling many real-world systems, such as population growth. However, these models are fully deterministic. Given the same initial conditions, they always produce the same trajectory.
 
@@ -52,13 +52,13 @@ These key properties include:
 
 A crucial consequence of the Gaussian increments property is the scaling of the noise in small time intervals. Over an infinitesimal interval $$dt$$, we have
 
-$$$dW_t = W_{t+dt} - W_t \sim \mathcal{N}(0, dt)$$$
+$$dW_t = W_{t+dt} - W_t \sim \mathcal{N}(0, dt)$$
 
 Thus, $$dW_t$$ has mean zero and variance $$dt$$, so its typical magnitude (standard deviation) is $$\sqrt{dt}$$.
 
-This gives rise to a useful informal rule in Itô calculus (which you'll see soon) is that $$(dW_t)^2 \approx dt$$ on average, while higher powers like $$(dt)^2$$ or $$dt \cdot dW_t$$ are negligible.
+This gives rise to a useful informal rule in Itô calculus (which you'll see soon) is that $$(dW_t)^2 \approx dt$$, while higher powers like $$(dt)^2$$ or $$dt \cdot dW_t$$ are negligible.
 
-These informal rules—$$(dW_t)^2 \approx dt$$, $$dt \cdot dW_t \approx 0$$, $$(dt)^2 \approx 0$$—will be made rigorous later, but they hint at why the stochastic integral is very different from traditional calculus.
+These informal rules — $$(dW_t)^2 \approx dt$$, $$dt \cdot dW_t \approx 0$$, $$(dt)^2 \approx 0$$ — will be made rigorous later, but they hint at why the stochastic integral is very different from traditional calculus.
 
 ## Itô's Formula
 
@@ -68,9 +68,9 @@ $$
 df(t,X_t) = \frac{\partial f}{\partial t}(t,X_t) \, dt + \frac{\partial f}{\partial x}(t,X_t) \, dX_t + \frac{1}{2} \frac{\partial^2 f}{\partial x^2}(t,X_t) \, (dX_t)^2,
 $$
 
-where the multiplication table is $dt \cdot dt = dt \cdot dW_t = 0$, $dW_t \cdot dW_t = dt$.
+where the multiplication table is $$dt \cdot dt = dt \cdot dW_t = 0$$, $$dW_t \cdot dW_t = dt$$.
 
-Substituting $dX_t = \mu \, dt + \sigma \, dW_t$ yields
+Substituting $$dX_t = \mu \, dt + \sigma \, dW_t$$ yields
 
 $$
 df(t,X_t) = \left( f_t + \mu f_x + \frac{1}{2} \sigma^2 f_{xx} \right) dt + \sigma f_x \, dW_t.
