--- a/_posts/2024-07-14-SDE.md
+++ b/_posts/2024-07-14-SDE.md
@@ -47,7 +47,7 @@ The noise term is $$\sigma(X_t, t)\, dW_t$$, which is driven by increments of a 
 
 These key properties include:
 - **Gaussian increments**: $$W_t - W_s \sim \mathcal{N}(0, t-s)$$ for $$t > s$$,
-- **Independent increments**: $W_{t_{k+1}} - W_{t_k}$ are mutually independent for disjoint intervals,
+- **Independent increments**: $$W_{t_{k+1}} - W_{t_k}$$ are mutually independent for disjoint intervals,
 - **Almost surely continuous paths**: $$t \mapsto W_t(\omega)$$ is continuous for almost every $$\omega$$.
 
 A crucial consequence of the Gaussian increments property is the scaling of the noise in small time intervals. Over an infinitesimal interval $$dt$$, we have
@@ -62,13 +62,19 @@ These informal rules — $$(dW_t)^2 \approx dt$$, $$dt \cdot dW_t \approx 0$$, $
 
 ## Itô's Formula
 
-If a function $$f(t,X_t)$$ includes random variabes $$X_t$$. Then for an Itô process, we can immediately deduce such formula
+Let's suppose there is a function $$f(t,X_t)$$ includes random variabes $$X_t$$. 
+
+In order to calculate $$df(t,X_t)$$, we can apply second-order Taylor expansion since it includes 2 variables:
+
+$$$df = \frac{\partial f}{\partial t} \, dt + \frac{\partial f}{\partial x} \, dX + \frac{1}{2} \frac{\partial^2 f}{\partial x^2} (dX)^2 + \frac{\partial^2 f}{\partial t \partial x} \, dt \, dX + \frac{1}{2} \frac{\partial^2 f}{\partial t^2} (dt)^2 + o((dt)^2 + (dX)^2)$$$
+
+Remember for the multiplication table, $$dt \cdot dt = dt \cdot dW_t = 0$$, $$dW_t \cdot dW_t = dt$$.
+
+Then for an Itô process, we can immediately deduce such formula
 
 $$
 df(t,X_t) = \frac{\partial f}{\partial t}(t,X_t) \, dt + \frac{\partial f}{\partial x}(t,X_t) \, dX_t + \frac{1}{2} \frac{\partial^2 f}{\partial x^2}(t,X_t) \, (dX_t)^2,
 $$
-
-where the multiplication table is $$dt \cdot dt = dt \cdot dW_t = 0$$, $$dW_t \cdot dW_t = dt$$.
 
 Substituting $$dX_t = \mu \, dt + \sigma \, dW_t$$ yields
 
@@ -114,17 +120,4 @@ $$
 \mathbb{E}[S_t] = S_0 e^{\mu t}.
 $$
 
-## Stratonovich Interpretation (Brief Note)
-
-The alternative Stratonovich SDE
-
-$$
-dX_t = \mu(t,X_t) \, dt + \sigma(t,X_t) \circ dW_t
-$$
-
-converts to Itô form via
-
-$$
-\mu^{\text{Itô}} = \mu^{\text{Strat}} + \frac{1}{2} \sigma \frac{\partial \sigma}{\partial x}.
-$$
 
