--- a/_posts/2024-08-21-LoRAa.md
+++ b/_posts/2024-08-21-LoRAa.md
@@ -3,7 +3,7 @@ layout: post
 title: LoRA - a potential parameter efficient fine-tuning method for large models
 date: 2024-08-13 16:15:09
 description: 
-categories: fine-tune
+categories: AI
 giscus_comments: true
 tabs: true
 related_posts: false
