--- a/_posts/2024-08-25-Grokking.md
+++ b/_posts/2024-08-25-Grokking.md
@@ -4,7 +4,7 @@ title: Grokking - a possible way to achieve AGI
 date: 2024-09-10 16:15:09
 description: 
 tags: formatting images
-categories: encoding method
+categories: AI
 tabs: true
 related_posts: false
 toc: 
