--- a/_posts/2025-02-08-SDE.md
+++ b/_posts/2025-02-08-SDE.md
@@ -3,7 +3,7 @@ layout: post
 title: SDE
 date: 2025-02-08 18:34:47
 description: 
-categories: Math
+categories: math
 giscus_comments: true
 tabs: true
 related_posts: false
@@ -66,7 +66,7 @@ Let's suppose there is a function $$f(t,X_t)$$ includes random variabes $$X_t$$.
 
 In order to calculate $$df(t,X_t)$$, we can apply second-order Taylor expansion since it includes 2 variables:
 
-$$$df = \frac{\partial f}{\partial t} \, dt + \frac{\partial f}{\partial x} \, dX + \frac{1}{2} \frac{\partial^2 f}{\partial x^2} (dX)^2 + \frac{\partial^2 f}{\partial t \partial x} \, dt \, dX + \frac{1}{2} \frac{\partial^2 f}{\partial t^2} (dt)^2 + o((dt)^2 + (dX)^2)$$$
+$$df = \frac{\partial f}{\partial t} \, dt + \frac{\partial f}{\partial x} \, dX + \frac{1}{2} \frac{\partial^2 f}{\partial x^2} (dX)^2 + \frac{\partial^2 f}{\partial t \partial x} \, dt \, dX + \frac{1}{2} \frac{\partial^2 f}{\partial t^2} (dt)^2 + o((dt)^2 + (dX)^2)$$
 
 Remember for the multiplication table, $$dt \cdot dt = dt \cdot dW_t = 0$$, $$dW_t \cdot dW_t = dt$$.
 
