--- a/_posts/2025-10-07-zod.md
+++ b/_posts/2025-10-07-zod.md
@@ -4,7 +4,7 @@ title: Improving ZOD-MC
 date: 2025-10-07 10:23:12
 description: 
 tags: formatting images
-categories: model architecture
+categories: math
 tabs: true
 related_posts: false
 toc: 
@@ -47,4 +47,7 @@ This failure surprises me at first, but after some retrospection, this has some 
 My tests confirm that these expansions work best for mild departures from normal distribution but are unreliable for multimodal or heavily skewed distributions.
 
 This experience has left me skeptical about using Edgeworth-type expansions for general-purpose density approximation, especially when the shape of the target is unknown or complex. For cases involving distinct modes, other methods will almost certainly be needed.
+
+
+## 2025-12-31
 
